<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <ImageView
        android:id="@+id/iv_detail_avatar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_avatar"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tv_detail_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:text="@string/company" />

    <TextView
        android:id="@+id/tv_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_company"
        tools:text="@string/location" />

    <TextView
        android:id="@+id/tv_detail_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/repository"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_nomor_repo" />

    <TextView
        android:id="@+id/tv_detail_nomor_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_repo"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_repo"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_location"
        tools:text="0"/>

    <TextView
        android:id="@+id/tv_detail_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/followers"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_following"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_repo"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_nomorFollowers"/>

    <TextView
        android:id="@+id/tv_detail_nomorFollowers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_followers"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_location"
        tools:text="1"/>

    <TextView
        android:id="@+id/tv_detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/following"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_nomorFollowing"/>

    <TextView
        android:id="@+id/tv_detail_nomorFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_following"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_following"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_location"
        tools:text="2"/>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_followers"
        app:tabSelectedTextColor="?android:textColorPrimary"
        app:tabTextColor="@android:color/darker_gray"/>

    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_unfavorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/share_button"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?android:attr/textColorSecondary" />

</androidx.constraintlayout.widget.ConstraintLayout>